--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@ layout: default
         {{ post.excerpt }}
       </div>
 
+      {% if post.content contains site.excerpt_separator or post.cut == true %}
       <a href="{{ site.baseurl }}{{ post.url }}" class="read-more">Читать полностью</a>
+      {% endif %}
     </article>
   {% endfor %}
 </div>
